Fixed carousel button not clickable issue on mobile

--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -26,6 +26,9 @@
   #root {
     overflow-x: hidden;
   }
+  .container {
+    height: 100%;
+  }
   #navbar-brand {
     padding-left: 1rem !important;
   }
